@@ -65,6 +65,19 @@ namespace Castle.MonoRail.Framework.Helpers
 	/// </remarks>
 	public class PaginationHelper : AbstractHelper
 	{
+		#region Constructors
+		/// <summary>
+		/// Initializes a new instance of the <see cref="PaginationHelper"/> class.
+		/// </summary>
+		public PaginationHelper() { }
+		/// <summary>
+		/// Initializes a new instance of the <see cref="PaginationHelper"/> class.
+		/// setting the Controller, Context and ControllerContext.
+		/// </summary>
+		/// <param name="engineContext">The engine context.</param>
+		public PaginationHelper(IEngineContext engineContext) : base(engineContext) { }
+		#endregion
+
 		/// <summary>
 		/// The parameter key that the helper looks for on the request
 		/// </summary>
