@@ -1,6 +1,9 @@
 1.0
 ===
 
+- Applied James Curran's patch fixing MR-390
+  "Adding AbstractHelper(IEngineContext) ctor"
+
 - Applied Gauthier Segay's patch fixing MR-388 
   "There should be a way to preserve url query string arguments while using DiggStylePagination" 
 
